--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vue-yandex-maps": "^0.7.10",
+    "vue2-scrollbar": "0.0.3",
     "vuex": "^3.0.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
